[package]
name = "tracing-tests"
version = "0.1.0"
authors = ["Quinn Okabayashi <qokabay1@swarthmore.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { version = "0.1.26", features = ["attributes"] }
tracing-subscriber = "0.2.19"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
chrono = "0.4.19"
tokio = { version = "1.8.1", features = ["full"] }