[package]
name = "tracing-tests"
version = "0.1.0"
authors = ["Quinn Okabayashi <qokabay1@swarthmore.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { version = "0.1.26", features = ["attributes"] }
tracing-subscriber = "0.2.19"
tokio = { version = "1.8.1", features = ["full"] }
chrono = "0.4.19"
uuid = { version = "0.8.2", features = ["v4"] }

serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
tracing-serde = "0.1.2"

tide = "0.16.0"
async-trait = "0.1.50"
async-std = { version = "1.9.0", features = ["attributes"] }
